--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,21 @@
+sudo: false
 language: python
+
+matrix:
+    include:
+      - python: "2.7"
+        env: TOX_ENV=py27-1.8
+      - python: "2.7"
+        env: TOX_ENV=py27-1.11
+      - python: "3.6"
+        env: TOX_ENV=py36-1.8
+      - python: "3.6"
+        env: TOX_ENV=py36-1.11
+      - python: "3.6"
+        env: TOX_ENV=py36-2.0
+
 install:
     - pip install tox coveralls
 script:
-    - tox
-env:
-    - TOXENV=py34-1.8
-    - TOXENV=py27-1.8
-    - TOXENV=py27-1.4
+    - tox -e $TOX_ENV
 after_success: coveralls
